add Priority column to /_replSet SERVER-1945